# libvirt-cim

./: .gitignore  .gitlab-ci.yml  .gitpublish  .hgignore  CONTRIBUTING.rst  Makefile.am  README  acinclude.m4  autoconfiscate.sh  autogen.sh  configure.ac  libvirt-cim.conf  libvirt-cim.spec.in  provider-register.sh  register_base.sh
.github/: lockdown.yml
.github/workflows/: lockdown.yml
base_schema/: Makefile.am  README.DMTF  cimv2.21.0-cimv2_mof  cimv2.21.0-interop_mof  cimv2.21.0-pginterop_mof  cimv216-interop_mof  fix_schema.patch  install_base_schema.sh.in
ci/: gitlab.yml  manifest.yml
ci/buildenv/: fedora-35.sh  fedora-36.sh  fedora-rawhide.sh
ci/containers/: ci-centos-7.Dockerfile  ci-fedora-32.Dockerfile  ci-fedora-33.Dockerfile  ci-fedora-rawhide.Dockerfile  fedora-33.Dockerfile  fedora-34.Dockerfile  fedora-35.Dockerfile  fedora-36.Dockerfile  fedora-rawhide.Dockerfile  libvirt-centos-7.Dockerfile  libvirt-fedora-31.Dockerfile  libvirt-fedora-32.Dockerfile  libvirt-fedora-33.Dockerfile  libvirt-fedora-rawhide.Dockerfile  refresh
ci/gitlab/: build-templates.yml  builds.yml  containers.yml
doc/: CodingStyle  Makefile.am  SubmittingPatches  architecture.html.in  downloads.html.in  index.html.in  libvirt-cim.html  page.xsl  patches.html.in  platforms.html.in  releases.html.in  schema.html.in  site.xsl  sitemap.html.in
examples/: diskpool.conf
libxkutil/: Makefile.am  acl_parsing.c  acl_parsing.h  capability_parsing.c  capability_parsing.h  cs_util.h  cs_util_instance.c  device_parsing.c  device_parsing.h  hostres.c  hostres.h  infostore.c  infostore.h  list_util.c  list_util.h  misc_util.c  misc_util.h  pool_parsing.c  pool_parsing.h  xml_parse_test.c  xmlgen.c  xmlgen.h
libxkutil/tests/: Makefile.am  infostore.c  xml_devices.c  xml_dominfo.c  xml_tag.c  xmlgen.c
schema/: AllocationCapabilities.mof  AllocationCapabilities.registration  AppliedFilterList.mof  AppliedFilterList.registration  ComputerSystem.mof  ComputerSystem.registration  ComputerSystemIndication.mof  ComputerSystemIndication.registration  ComputerSystemMigrationIndication.mof  ComputerSystemMigrationIndication.registration  ConcreteComponent.mof  ConcreteComponent.registration  ConsoleRedirectionService.mof  ConsoleRedirectionService.registration  ConsoleRedirectionServiceCapabilities.mof  ConsoleRedirectionServiceCapabilities.registration  Controller.mof  Controller.registration  ControllerPool.mof  ControllerPool.registration  DiskPool.mof  DiskPool.registration  DisplayController.mof  DisplayController.registration  ElementAllocatedFromPool.mof  ElementAllocatedFromPool.registration  ElementCapabilities.mof  ElementCapabilities.registration  ElementConformsToProfile.mof  ElementConformsToProfile.registration  ElementSettingData.mof  ElementSettingData.registration  EnabledLogicalElementCapabilities.mof  EnabledLogicalElementCapabilities.registration  EntriesInFilterList.mof  EntriesInFilterList.registration  FilterEntry.mof  FilterEntry.registration  FilterList.mof  FilterList.registration  (+86 more)
src/: Makefile.am  Virt_AllocationCapabilities.c  Virt_AllocationCapabilities.h  Virt_AppliedFilterList.c  Virt_ComputerSystem.c  Virt_ComputerSystem.h  Virt_ComputerSystemIndication.c  Virt_ComputerSystemIndication.h  Virt_ComputerSystemMigrationIndication.c  Virt_ConcreteComponent.c  Virt_ConsoleRedirectionService.c  Virt_ConsoleRedirectionService.h  Virt_ConsoleRedirectionServiceCapabilities.c  Virt_ConsoleRedirectionServiceCapabilities.h  Virt_Device.c  Virt_Device.h  Virt_DevicePool.c  Virt_DevicePool.h  Virt_ElementAllocatedFromPool.c  Virt_ElementCapabilities.c  Virt_ElementConformsToProfile.c  Virt_ElementConformsToProfile.h  Virt_ElementSettingData.c  Virt_EnabledLogicalElementCapabilities.c  Virt_EnabledLogicalElementCapabilities.h  Virt_EntriesInFilterList.c  Virt_FilterEntry.c  Virt_FilterEntry.h  Virt_FilterList.c  Virt_FilterList.h  Virt_HostSystem.c  Virt_HostSystem.h  Virt_HostedAccessPoint.c  Virt_HostedDependency.c  Virt_HostedFilterList.c  Virt_HostedResourcePool.c  Virt_HostedService.c  Virt_KVMRedirectionSAP.c  Virt_KVMRedirectionSAP.h  Virt_NestedFilterList.c  (+37 more)
src/tests/: Makefile.am  test_link.sh
tools/: migration_tester.py
